--- a/index.html
+++ b/index.html
@@ -22,35 +22,37 @@
 
   <main>
     <section class="contenedor">
+      <section class="card">
 
-      <div class="informacion">
-        <h1>Get <span>insights</span> that help your business grow.</h1>
-        <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
-        
-        <div class="atribuciones">
-
-          <div>
-            <h2>10k+</h2>
-            <p>companies</p>
-          </div>
-
-          <div>
-            <h2>314</h2>
-            <p>templates</p>
-          </div>
-
-          <div>
-            <h2>12m+</h2>
-            <p>queries</p>
-          </div>
+        <div class="imagen">
+          <img src="./images/image-header-desktop.jpg" alt="">
+          <div class="fondo-morado"></div>
         </div>
 
-      </div>
-
-      <div class="imagen">
-        <img src="./images/image-header-desktop.jpg" alt="">
-      </div>
-
+        <div class="informacion">
+          <h1>Get <span class="acento">insights</span> that help your business grow.</h1>
+          <p class="texto">Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
+          
+          <div class="atribuciones">
+  
+            <div class="grupo1">
+              <h2>10k+</h2>
+              <p class="stats">companies</p>
+            </div>
+  
+            <div class="grupo2">
+              <h2>314</h2>
+              <p class="stats">templates</p>
+            </div>
+  
+            <div class="grupo3">
+              <h2>12M+</h2>
+              <p class="stats">queries</p>
+            </div>
+          </div>
+  
+        </div>
+      </section>
     </section>
   </main>
 
